# Core-Halo-Anatomy-JEPA

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
configs/real/: core_halo_anatomy.yaml
configs/synthetic/: core_halo.yaml  core_halo_anatomy.yaml  falsification_base.yaml  local_context.yaml  wide_context.yaml
docs/: FALSIFICATION_RUN.md  REAL_DATA_PROTOCOL.md
outputs/poc/: poc_summary.json  poc_summary.md
outputs/poc/core_halo/seed_0/: metrics.json  resolved_config.yaml  train_history.json  training_summary.json
outputs/poc/core_halo/seed_1/: metrics.json  resolved_config.yaml  train_history.json  training_summary.json
outputs/poc/core_halo/seed_2/: metrics.json  resolved_config.yaml  train_history.json  training_summary.json
outputs/poc/core_halo_anatomy/seed_0/: metrics.json  resolved_config.yaml  train_history.json  training_summary.json
outputs/poc/core_halo_anatomy/seed_1/: metrics.json  resolved_config.yaml  train_history.json  training_summary.json
outputs/poc/core_halo_anatomy/seed_2/: metrics.json  resolved_config.yaml  train_history.json  training_summary.json
outputs/poc/local_context/seed_0/: metrics.json  (+3 more)
scripts/: package_results.py  prepare_nifti.py  run_falsification.py  run_synthetic_poc.py
src/core_halo_jepa/: __init__.py  cli.py  config.py  data.py  engine.py  falsification.py  geometry.py  metrics.py  model.py  result_packaging.py  scoring.py  utils.py  visualization.py
tests/: test_falsification.py  test_geometry.py  test_model.py  test_package_results.py  test_scoring.py  test_synthetic.py
(+20 files in other folders)
