[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "core-halo-anatomy-jepa"
version = "0.1.0"
description = "A falsifiable PoC for scale-decoupled, anatomy-aware JEPA anomaly localization in brain MRI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Core-Halo Anatomy JEPA contributors"}]
dependencies = [
  "numpy>=1.24",
  "PyYAML>=6.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "torch>=2.1",
  "tqdm>=4.66",
]

[project.optional-dependencies]
medical = ["nibabel>=5.2"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
core-halo-jepa = "core_halo_jepa.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
